Using ES6, searching the doc for any audio element that matches the event keycode, then print that audio element

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -47,6 +47,7 @@
     </div>
   </div>
 
+  <!-- Data attr: custom attr that stores data in a string format -->
   <audio data-key='65' src='sounds/clap.wav'></audio>
   <audio data-key='83' src='sounds/hihat.wav'></audio>
   <audio data-key='68' src='sounds/kick.wav'></audio>
@@ -59,7 +60,9 @@
 
 <script>
   window.addEventListener('keydown', function (e) {
-    console.log(e);
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+
+    console.log(audio);
   });
 </script>
 
