--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -61,8 +61,8 @@
 <script>
   window.addEventListener('keydown', function (e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-
-    console.log(audio);
+    if(!audio) return; //stop fn from running any further
+    audio.play();
   });
 </script>
 
