--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -62,7 +62,9 @@
   window.addEventListener('keydown', function (e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     if(!audio) return; //stop fn from running any further
-    audio.play();
+    audio.currentTime = 0; //allows audio to rewind to the beginning
+    audio.play(); //if audio element is already playing, it will ignore
+
   });
 </script>
 
