--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="UTF-8">
+  <meta charset='UTF-8'>
   <title>JS + CSS Clock</title>
 </head>
 <body>
 
 
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
+    <div class='clock'>
+      <div class='clock-face'>
+        <div class='hand hour-hand'></div>
+        <div class='hand min-hand'></div>
+        <div class='hand second-hand'></div>
       </div>
     </div>
 
