--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -61,6 +61,7 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%; /* Allows rotation of hands to be in the middle */
     }
 
   </style>
