added rule to make the default start point of hands at 12 o'clock

--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -62,6 +62,7 @@
       position: absolute;
       top:50%;
       transform-origin: 100%; /* Allows rotation of hands to be in the middle */
+      transform: rotate(90deg); /* Allows hands to start at 12 o'clock */
     }
 
   </style>
