added a rule to give a 'snap' like feature when hands tick

--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -63,7 +63,8 @@
       top:50%;
       transform-origin: 100%; /* Allows rotation of hands to be in the middle */
       transform: rotate(90deg); /* Allows hands to start at 12 o'clock */
-      transition: all 0.5s;
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
