--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -73,7 +73,9 @@
   <script>
 
     function setDate() {
-      console.log('hi');
+      const now = new Date();
+      const seconds = now.getSeconds();
+      console.log(seconds);
     }
 
     // will allow setDate fn to run every 1000ms/1s
