--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -74,7 +74,11 @@
 
     const secondHand = document.querySelector('.second-hand');
     const minsHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    /**
+     * Sets up the rotation of hands on clock.
+     */
     function setDate() {
       const now = new Date();
 
@@ -86,7 +90,9 @@
       const minsDegrees = ((mins / 60) * 360) + 90;
       minsHand.style.transform = `rotate(${minsDegrees}deg)`;
 
-
+      const hour = now.getMinutes();
+      const hourDegrees = ((hour / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
     }
 
     // will allow setDate fn to run every 1000ms/1s
