--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -28,6 +28,14 @@
       --blur: 10px;
     }
 
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    
+
     /*
       misc styles, nothing to do with CSS variables
     */
