testing the function to link input changes

--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -65,7 +65,13 @@
 
   <script>
 
-    const inputs = document.querySelectorAll('.controls inputs')
+    const inputs = document.querySelectorAll('.controls input');
+
+    function handleUpdate() {
+      console.log(this.value);
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate));
 
   </script>
 
