--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -82,14 +82,40 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+      /**
+      // 1) Find DOM element and find what contains Boulevards
+      const category = document.querySelector('.mw-category');
+      // 2) Find links inside previous element and convert nodelist into an array
+      const links = Array.from(category.querySelectorAll('a'));
+      // OR ES6 const links = [...(category.querySelectorAll('a')];
+      // 3) Get the names of all the Boulevards with de
+      const de = links
+                    .map(link => link.textContent)
+                    .filter(streetName => streetName.includes('de'));
+      **/
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort((lastOne, nextOne) => {
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+    console.log(alpha);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transportation = data.reduce((obj, item) => {
+      //first check if item exists, if not, create it in obj, set it to 0, and then increment
+      if(!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++
+      return obj;
+    }, {});
+    console.log(transportation);
 
   </script>
 </body>
