--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -61,7 +61,6 @@
       margin:0;
       width: 100%;
       transition:transform 0.5s;
-      border: 1px solid red;
       flex: 1 0 auto;
       display: flex;
       justify-content: center;
@@ -95,6 +94,7 @@
     }
 
     .panel.open {
+      flex: 5; /* Takes up 5 times more space than other panels */
       font-size:40px;
     }
 
