--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -15,7 +15,30 @@
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+  const cities = [];
+
+  fetch(endpoint)
+    .then(blob => blob.json())
+    .then(data => cities.push(...data));
+    // "..." is the es6 spread method - prevents nesting of arguments
+
+  /**
+   * Finds cities or state that match word given
+   * @param  {String}   wordToMatch   the word to search for
+   * @param  {Array}    cities        Array of cities that will be searched
+   * @return {Array}    place(s)      results that match the given word
+   */
+  function findMatches(wordToMatch, cities) {
+    return cities.filter(place => {
+      // if city/state matches the search, then show those
+      const regex = new RegExp(wordToMatch, 'gi'); //g=global, i=not case sensitive
+      return place.city.match(regex) || place.state.match(regex);
+    });
+  }
+
+
 
 </script>
   </body>
