results are displayed below input field

--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -38,7 +38,24 @@
     });
   }
 
+  function displayMatches() {
+    const matchArray = findMatches(this.value, cities);
+    const html = matchArray.map(place => {
+      return `
+        <li>
+          <span class='name'>${place.city}, ${place.state}</span>
+          <span class='population'>${place.population}</span>
+        </li>
+      `;
+    }).join(''); //join turns the seperate lines into a single string.
+    suggestions.innerHTML = html;
+  }
 
+  const searchInput = document.querySelector('.search');
+  const suggestions = document.querySelector('.suggestions');
+
+  searchInput.addEventListener('change', displayMatches); //results once you go off input
+  searchInput.addEventListener('keyup', displayMatches); //results as each key is pressed
 
 </script>
   </body>
