--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -38,13 +38,29 @@
     });
   }
 
+  /**
+   * Regex function to add commas to number.
+   * @param  {String}   x   the number
+   * @return {String}       string with commas between numbers
+   */
+  function numberWithCommas(x) {
+    return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+  }
+
+  /**
+   * displays results for input of matching city/state
+   * @return {Array} results
+   */
   function displayMatches() {
     const matchArray = findMatches(this.value, cities);
     const html = matchArray.map(place => {
+      const regex = new RegExp(this.value, 'gi');
+      const cityName = place.city.replace(regex, `<span class='hl'>${this.value}</span>`);
+      const stateName = place.state.replace(regex, `<span class='hl'>${this.value}</span>`);
       return `
         <li>
-          <span class='name'>${place.city}, ${place.state}</span>
-          <span class='population'>${place.population}</span>
+          <span class='name'>${cityName}, ${stateName}</span>
+          <span class='population'>${numberWithCommas(place.population)}</span>
         </li>
       `;
     }).join(''); //join turns the seperate lines into a single string.
