--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -5,15 +5,25 @@
   <title>HTML5 Canvas</title>
 </head>
 <body>
-<canvas id='draw' width='800' height='800'></canvas>
-<script>
-</script>
+  <canvas id='draw' width='800' height='800'></canvas>
 
-<style>
-  html, body {
-    margin:0;
-  }
-</style>
+
+  <script>
+    const canvas = document.querySelector('#draw');
+    // can't draw on canvas element itself, only on context
+    const ctx = canvas.getContext('2d');
+
+    //allows canvas to resize to window height
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+  </script>
+
+  <style>
+    html, body {
+      margin:0;
+    }
+  </style>
 
 </body>
 </html>
