--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -27,10 +27,16 @@
     let lastY = 0;
 
     function draw(e) {
+      if (!isDrawing) return; // stop function from proceeding if not mousedown
       console.log(e);
     }
 
     canvas.addEventListener('mousemove', draw);
+    canvas.addEventListener('mousedown', () => isDrawing = true);
+    canvas.addEventListener('mouseup', () => isDrawing = false);
+    canvas.addEventListener('mouseout', () => isDrawing = false);
+
+
 
   </script>
 
