--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -29,14 +29,21 @@
     function draw(e) {
       if (!isDrawing) return; // stop function from proceeding if not mousedown
       console.log(e);
+      ctx.beginPath();
+      //starting from
+      ctx.moveTo(lastX, lastY);
+      // going to
+      ctx.lineTo(e.offsetX, e.offsetY);
+      ctx.stroke();
+      [lastX, lastY] = [e.offsetX, e.offsetY];
+
     }
 
-    canvas.addEventListener('mousemove', draw);
     canvas.addEventListener('mousedown', () => isDrawing = true);
+
+    canvas.addEventListener('mousemove', draw);
     canvas.addEventListener('mouseup', () => isDrawing = false);
     canvas.addEventListener('mouseout', () => isDrawing = false);
-
-
 
   </script>
 
