--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -19,6 +19,7 @@
     ctx.strokeStyle = '#BADA55'; //color
     ctx.lineJoin = 'round';
     ctx.lineCap = 'round';
+    ctx.lineWidth = 50;
 
     let isDrawing = false;
 
@@ -26,9 +27,13 @@
     let lastX = 0;
     let lastY = 0;
 
+    let hue = 0;
+
     function draw(e) {
       if (!isDrawing) return; // stop function from proceeding if not mousedown
       console.log(e);
+
+      ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`; // hue, saturation, light
       ctx.beginPath();
       //starting from
       ctx.moveTo(lastX, lastY);
@@ -36,7 +41,7 @@
       ctx.lineTo(e.offsetX, e.offsetY);
       ctx.stroke();
       [lastX, lastY] = [e.offsetX, e.offsetY];
-
+      hue++;
     }
 
     canvas.addEventListener('mousedown', (e) => {
