--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -28,6 +28,7 @@
     let lastY = 0;
 
     let hue = 0;
+    let direction = true;
 
     function draw(e) {
       if (!isDrawing) return; // stop function from proceeding if not mousedown
@@ -41,7 +42,20 @@
       ctx.lineTo(e.offsetX, e.offsetY);
       ctx.stroke();
       [lastX, lastY] = [e.offsetX, e.offsetY];
+
       hue++;
+      if (hue >= 360) {
+        hue = 0;
+      }
+      if (ctx.lineWidth >= 150 || ctx.lineWidth <= 10) {
+        direction = !direction;
+      }
+      if (direction) {
+        ctx.lineWidth++;
+      } else {
+        ctx.lineWidth--;
+      }
+
     }
 
     canvas.addEventListener('mousedown', (e) => {
