added a blend options, more can be found

--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -20,6 +20,7 @@
     ctx.lineJoin = 'round';
     ctx.lineCap = 'round';
     ctx.lineWidth = 50;
+    ctx.globalCompositeOperation = 'multiply'; //blend options
 
     let isDrawing = false;
 
