--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,59 @@
     }
 
     // Regular
+    console.log('hello');
+    console.table(dogs);
 
     // Interpolated
+    console.log('hello I am a %s string!', '💖');
+    console.log(`hello I am a ${'💖'} string!`); //es6
 
     // Styled
+    console.log('%c I am styled text', 'font-size:20px; background:cyan; text-shadow: 2px 0 0 pink');
 
     // warning!
+    console.warn('uh oh!');
 
     // Error :|
+    console.error('oops');
 
     // Info
+    console.info('crocodiles eat 3-4 people per year...');
 
     // Testing
+    console.assert(1 === 1, 'that is wrong!'); //won't show anything because assertion is true
+    console.assert(1 === 2, 'that is wrong!'); //assertion will show because it is not true
+
+    const p = document.querySelector('p');
+    console.assert(p.classList.contains('ouch'), 'ouch is not there');
 
     // clearing
+    // console.clear(); //clears console
 
     // Viewing DOM Elements
+    console.log(p);
+    console.dir(p); //drop down of element
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.group(`${dog.name}`); //console.groupCollapsed to keep it closed
+      console.log(`This is ${dog.name}.`);
+      console.log(`${dog.name} is ${dog.age} years old.`);
+      console.log(`${dog.name} is ${dog.age * 7} years old in dog years.`);
+      console.groupEnd(`${dog.name}`);
+    });
 
     // counting
+    console.count('Wes');
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/csaminak')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
 
   </script>
 </body>
