added event listener onto checkbox and starting to write what should happen when a checkbox is clicked while shift is being held

--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -107,12 +107,21 @@
 
   <script>
     const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+    let lastChecked;
 
     function handleCheck(e) {
-      console.log(e);
+      let inBetween = false;
+
+      if(e.shiftKey && this.checked) {
+        checkboxes.forEach(checkbox => {
+          console.log(checkbox);
+        });
+      }
+
+      lastChecked = this;
     }
 
-    checkboxes.forEach(checkbox => addEventListener('click', handleCheck));
+    checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 
   </script>
 </body>
